--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-g -Wall `pkg-config --cflags --libs gtk+-3.0 gmodule-2.0`
 LDFLAGS=-g -Wall `pkg-config --cflags --libs gtk+-3.0 gmodule-2.0` -lm
 
-OBJ=tce.o tcg.o ps.o
+OBJ=tce.o tcg.o ps.o tcg_path.o
 
 
 tce: $(OBJ)
